--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "code_snippet_app",
   "version": "0.1.0",
   "private": true,
+  "volta": {
+    "node": "23.3.0",
+    "npm": "10.2.3"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
